improve the docs

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -22,4 +22,25 @@
   :where(ol:not(.sb-anchor, .sb-unstyled, .sb-unstyled ol)) li {
     list-style-type: decimal;
   }
+
+  .prismjs {
+    background-color: #F2F0E5 !important;
+  }
+
+  .prismjs .token.key {
+    color: #205EA6 !important;
+  }
+
+  .prismjs .token.string {
+    color: #24837B !important;
+  }
+
+  .prismjs .token.number {
+    color: #24837B !important;
+  }
+
+.prismjs .token.datetime {
+  color: #24837B !important;
+}
+
 </style>
