improve the linear calendar docs

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -43,4 +43,13 @@
   color: #24837B !important;
 }
 
+code {
+  background-color: #F2F0E5 !important;
+  border-color: #E6E4D9 !important;
+}
+
+.docblock-code-toggle {
+  display: none !important;
+}
+
 </style>
