storybook ui changes

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,5 +1,6 @@
 
-<style>
+<style>/** biome-ignore-all lint/complexity/noImportantStyles: Storybook overrides */
+
   #storybook-docs .sbdocs {
     background-color: #FFFCF0;
   }
