minor ui changes

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -84,4 +84,9 @@ code {
   border-color: #879A39 !important;
 }
 
+.sbdocs .sbdocs-preview {
+  border-style: dashed !important;
+  border-width: 2px !important;
+}
+
 </style>
